2007-01-24  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_Event.py (Event): Change inheritance order.
	* src/RelLib/_Family.py (Family): Change inheritance order.
	* src/RelLib/_MediaObject.py (MediaObject): Change inheritance order.
	* src/RelLib/_Place.py (Place): Change inheritance order.
	* src/RelLib/_Repository.py (Repository): Change inheritance order.
	* src/RelLib/_Person.py (Person): Change inheritance order.
	* src/RelLib/_Source.py (Source): Change inheritance order.
	(_has_handle_reference, _remove_handle_references,
	_replace_handle_reference): Add methods to report correct
	repository references.
	* src/DisplayTabs/_BackRefModel.py (__init__): Remove extra statement.

2007-01-24  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py: Add "open with" option for book reports
	* src/docgen/OpenOfficeDoc.py: Add "open with" option for book reports
	* src/plugins/BookReport.py: Add "open with" option for book reports
	* src/PluginUtils/_PluginMgr.py: Add "open with" option for book reports
	* src/docgen/RTFDoc.py: Properly escape "\n" characters

2007-01-24  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: 0000871: Holidays do not work in Windows
	* src/plugins/holidays.xml: 0000871: Holidays do not work in Windows

2007-01-24  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/PSDrawDoc.py: 0000869: PostScript print option will crash
	* src/ReportBase/__init__.py: 0000869: PostScript print option will crash
	* src/ReportBase/_PrintTools.py: 0000869: PostScript print option will crash

2007-01-24  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/docgen/PdfDoc.py: 0000870: docgen/PdfDoc.py offset error, 
	  and missing italics
	* src/plugins/Calendar.py: 0000858: Patch for calendar enhancements 
	  and new Birthday Report
	* src/plugins/holidays.xml: add holidays for France

2007-01-23  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: add view option